--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,14 +8,14 @@ RUN apk add --no-cache gcc musl-dev
 WORKDIR /app
 
 # Copier les fichiers go.mod et go.sum d'abord pour tirer parti du cache Docker
-COPY main/go.mod main/go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
 
 # Copier le reste du code source
 COPY . .
 
 # Compiler l'application
-RUN CGO_ENABLED=1 GOOS=linux go build -a -o forum ./main/main.go
+RUN CGO_ENABLED=1 GOOS=linux go build -a -o forum main.go
 
 # Utiliser une image alpine légère pour l'exécution
 FROM alpine:3.18
@@ -33,7 +33,7 @@ RUN mkdir -p /app/static /app/templates /app/uploads
 # Copier l'exécutable compilé et les fichiers statiques
 COPY --from=builder /app/forum /app/
 COPY --from=builder /app/web/static /app/static
-COPY --from=builder /app/web/templates /app/templates
+COPY --from=builder /app/web/ /app/templates
 
 # Définir l'utilisateur non-root
 USER appuser
